# WhatToC

./: CMakeLists.txt  README.md  WhatToC_2025-06-28-223506.collapsed
src/: Board.cpp  Board.h  Engine.cpp  Engine.h  Move.cpp  Move.h  MoveGenerator.cpp  MoveGenerator.h  PERFT.cpp  PERFT.h  PRNG.cpp  PRNG.h  ZobristRandoms.cpp  ZobristRandoms.h  board_defs.cpp  board_defs.h  find_magics.cpp  find_magics.h  main.cpp  perft_tests.cpp  refactor.cpp
src/bit_helpers/: bit_helpers.cpp
src/board/: Board.cpp  Board.h  ZobristRandoms.cpp  ZobristRandoms.h
src/helpers/: bit_helpers.cpp  bit_helpers.h  board_defs.h  prng.cpp  prng.h
src/movegen/: find_magics.cpp  find_magics.h  move.cpp  move.h  move_gen.cpp  move_gen.h
src/perft/: PERFT.cpp  PERFT.h
